--- a/web-app/package.json
+++ b/web-app/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "web3": "^1.0.0-beta.51",
+    "ethereumjs-tx": "^1.3.7"
   }
 }
